--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <title>
             {% block title %} {% endblock %}
         </title>
