--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,21 @@
+.content {
+    text-align: center;
+}
 body {
     margin: 0;
-    padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #444;
+}
+table {
+    border: 1px solid #000;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+tr {
+    border-bottom: 1px solid #000;
+    width: auto;
+}
+td, th {
+    border: 1px solid #000;
+    width: auto;
 }
