--- a/templates/index.html
+++ b/templates/index.html
@@ -6,28 +6,33 @@
 <div class="content">
     <h1> Task Master</h1>
 
-    <table>
-        <tr>
-            <th>Task</th>
-            <th>Added</th>
-            <th>Actions</th>
-        </tr>
-        {% for task in tasks %}
+    {% if tasks|length < 1 %}
+    <h3>There are no Tasks! Create one</h3>
+
+    {% else %}
+        <table>
             <tr>
-                <td> {{ task.content }} </td>   
-                <td>{{ task.date_created.date() }}</td>
-                <td>
-                    <a href="/delete/{{ task.id }}">Delete</a>
-                    <br>
-                    <a href="/update/{{ task.id }}">Update</a>
-                </td>
+                <th>Task</th>
+                <th>Added</th>
+                <th>Actions</th>
             </tr>
-        {% endfor %}
-    </table>
-    <br>
-    <form action="/" method="post">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">      
-    </form>
+            {% for task in tasks %}
+                <tr>
+                    <td> {{ task.content }} </td>   
+                    <td>{{ task.date_created.date() }}</td>
+                    <td>
+                        <a href="/delete/{{ task.id }}">Delete</a>
+                        <br>
+                        <a href="/update/{{ task.id }}">Update</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
+        <br>
+        <form action="/" method="post">
+            <input type="text" name="content" id="content">
+            <input type="submit" value="Add Task">      
+        </form>
 </div>
 {% endblock %}
